# cop-solidity-signature

./: LICENSE  README.md
contracts/script/: Counter.s.sol
contracts/src/: Counter.sol
contracts/test/: Counter.t.sol
extras/claimcop/: Drawing 2025-08-07 17.00.51.excalidraw.md  pocclaimverification.md
python-client/: .gitignore  pyproject.toml  requirements.txt
python-client/src/: env.example.py  main.py
python-client/tests/: test_main.py
typescript-client/: .eslintrc.json  .gitignore  package-lock.json  package.json  tsconfig.json
typescript-client/src/: env.example.ts  index.test.ts  index.ts
